# igor-loader

./: .gitignore  README.md  pyproject.toml
Tutorial/: Tutorial.ipynb
Tutorial/Tutorial_data/: WSe2_007_001.ibw  WSe2_011.ibw  WSe2_014.ibw  WSe2_021.ibw  WSe2_022.ibw  WSe2_023.ibw  WSe2_024.ibw  WSe2_025.ibw  WSe2_030.ibw  WSe2_032.ibw  WSe2_034.ibw
src/: Analysis.ipynb  Axis_scan.ipynb  Sweep.ipynb  Tilt.ipynb  helpers.py
src/igor_loader/: __init__.py  helpers.py  main.py  metadata.py
src/igor_loader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/test_data/: WSe2_007_002.ibw  WSe2_007_003.ibw  WSe2_007_004.ibw  WSe2_007_005.ibw  WSe2_007_006.ibw  WSe2_007_007.ibw  WSe2_007_008.ibw  WSe2_015.ibw  WSe2_016.ibw  WSe2_017.ibw  WSe2_018.ibw  WSe2_019.ibw  WSe2_020.ibw  WSe2_026.ibw  WSe2_027.ibw  WSe2_028.ibw  WSe2_029.ibw  WSe2_031.ibw  WSe2_033.ibw
