[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]

[project]
name = "Igor-loader"
dynamic = ["version"]
description = "A set of tools for loading and converting photoemission data"
authors = [
    {name = "Túlio de Castro", email = "decastro@fhi-berlin.mpg.de"},
]
readme = "README.md"
keywords = ["arpes", "phoibos"]
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.1,<2.0",
    "xarray>=0.20.2",
    "nxarray>=0.4.4",
    "igor2>=0.5.12",
]

[project.urls]
repository = "https://github.com/OpenCOMPES/Igor-loader"
documentation = 

[project.optional-dependencies]
dev = [
    
]

docs = [
    
]

notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.9.1",
    "jupyterlab>=4.0",
    "jupyterlab-h5web>=8.0.0",
]
all = [
    "Igor-loader[dev,docs,notebook]",
]

[tool.coverage.report]
omit = [
    "./config.py",
    "./config-3.py",
]

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
lint.select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
    "F841", # unused variable
    "F401", # unused imports
    "ARG", # unused arguments
]
lint.ignore = [
    "E701", # Multiple statements on one line (colon)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLR5501", # else-if-used
    "PLW2901", # redefined-loop-name
]
lint.fixable = ["ALL"]
line-length = 100 # change the default line length number or characters.

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"